--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -112,12 +112,17 @@
     <bool name="config_buttonTextAllCaps">false</bool>
     <bool name="config_unplugTurnsOnScreen">true</bool>
     <bool name="config_sendPackageName">true</bool>
-    <dimen name="config_dialogCornerRadius">16dp</dimen>
+    <dimen name="config_dialogCornerRadius">28dp</dimen>
     <dimen name="config_buttonCornerRadius">8dp</dimen>
     <dimen name="config_bottomDialogCornerRadius">32dp</dimen>
     <dimen name="config_progressBarCornerRadius">1000.0dip</dimen>
     <!-- Corner radius of search bars and cards -->
     <dimen name="config_cardCornerRadius">24dp</dimen>
+
+    <!-- System-provided radius for the background view of app widgets. The resolved value of this resource may change at runtime. -->
+    <dimen name="system_app_widget_background_radius">28dp</dimen>
+    <!-- System-provided radius for inner views on app widgets. The resolved value of this resource may change at runtime. -->
+    <dimen name="system_app_widget_inner_radius">20dp</dimen>
 
     <!-- Flag indicating whether round icons should be parsed from the application manifest. -->
     <bool name="config_useRoundIcon">true</bool>
