overlay: core: Add chroma to light surface highlight color
With dynamic Monet themes, most of the UI has at least a small amount
of color (chroma), so pure white stands out as the sole outlier (e.g.
Settings search bar in light mode). Use the 99% lightness shade instead
to improve consistency.

--- a/overlay/common/frameworks/base/core/res/res/values/colors_device_defaults.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/colors_device_defaults.xml
@@ -30,5 +30,8 @@
     <color name="tertiary_device_default_settings">#FF616161</color>
 
     <color name="background_floating_device_default_dark">@color/secondary_device_default_dark</color>
+
+    <!-- Surface colors -->
+    <color name="surface_highlight_light">@android:color/system_neutral1_10</color>
 </resources>
 
