--- a/overlay/common/frameworks/base/packages/SettingsProvider/res/values/config.xml
+++ b/overlay/common/frameworks/base/packages/SettingsProvider/res/values/config.xml
@@ -22,4 +22,6 @@
     <string name="def_backup_transport">com.google.android.gms/.backup.BackupTransportService</string>
 
     <bool name="def_bluetooth_on">false</bool>
+
+    <bool name="def_one_handed_mode_enabled">true</bool>
 </resources> 
