device_config: Keep up to 7 days of permission usage history
Keeping 7 days of discrete app op history allows us to show a 7-day
permission usage timeline in the privacy dashboard.

--- a/overlay/common/packages/apps/SimpleDeviceConfig/res/values/config.xml
+++ b/overlay/common/packages/apps/SimpleDeviceConfig/res/values/config.xml
@@ -94,6 +94,9 @@
         <!-- Use new privacy indicators for location -->
         <item>privacy/location_indicators_enabled=true</item>
 
+        <!-- Keep up to 7 days of permission usage history -->
+        <item>privacy/discrete_history_cutoff_millis=604800000</item>
+
         <!-- ART heap compaction for cached apps -->
         <item>activity_manager/use_compaction=true</item>
 
