--- a/overlay/common/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/common/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -22,4 +22,6 @@
 
     <!-- The height of the divider between the individual notifications. -->
     <dimen name="notification_divider_height">0dp</dimen>
+
+    <dimen name="global_actions_translate">0dp</dimen>
 </resources>
