--- a/overlay/common/frameworks/base/core/res/res/values/colors_device_defaults.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/colors_device_defaults.xml
@@ -16,21 +16,7 @@
 
 <resources>
 
-<!-- Colors specific to DeviceDefault themes. These are mostly pass-throughs to enable
-     overlaying new theme colors. -->
-    <color name="primary_device_default_dark">#FF1A1A1A</color>
-    <color name="secondary_device_default_dark">#FF2F2F2F</color>
-    <color name="tertiary_device_default_dark">#FF616161</color>
-
-    <color name="primary_dark_device_default_dark">@color/primary_device_default_dark</color>
-    <color name="primary_dark_device_default_settings">@color/primary_device_default_dark</color>
-
-    <color name="primary_device_default_settings">#FF1A1A1A</color>
-    <color name="secondary_device_default_settings">#FF2F2F2F</color>
-    <color name="tertiary_device_default_settings">#FF616161</color>
-
-    <color name="background_floating_device_default_dark">@color/secondary_device_default_dark</color>
-
+<!-- Colors specific to DeviceDefault themes. These are mostly pass-throughs to enable -->
     <!-- Surface colors -->
     <color name="surface_highlight_light">@android:color/system_neutral1_10</color>
 </resources>
